--- a/rhymecity/src/main/res/layout/map_layout.xml
+++ b/rhymecity/src/main/res/layout/map_layout.xml
@@ -15,27 +15,52 @@
         android:layout_height="wrap_content"
         android:background="#99000000"
         android:orientation="horizontal"
-        android:visibility="visible">
+        android:visibility="visible"
+        android:weightSum="1">
 
-        <TextView
-            android:id="@+id/txtAddress"
-            android:layout_width="0dp"
-            android:layout_weight="0.7"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:text="x"
-            android:textColor="#ffffff"
-            android:textSize="15dp"
-            />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.9">
 
-        <ImageView
-            android:layout_marginRight="20dp"
-            android:id="@+id/navigationIcon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:scaleType="centerCrop"
-            android:layout_gravity="center"
-            android:src="@drawable/abs__ab_bottom_solid_dark_holo"/>
+            <TextView
+                android:id="@+id/txtAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="x"
+                android:layout_marginLeft="10dp"
+                android:padding="10dp"
+                android:textColor="#ffffff"
+                android:textSize="14dp"
+                />
+
+            <TextView
+                android:id="@+id/weather"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="x"
+                android:layout_marginLeft="10dp"
+                android:padding="10dp"
+                android:textColor="#ffffff"
+                android:textSize="14dp"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.1"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/navigationIcon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/abs__ab_bottom_solid_dark_holo"/>
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -65,38 +90,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="0.05"
-                android:weightSum="1">
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.2">
-
-                    <ImageView
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:id="@+id/imgWeather"
-                        android:src="@drawable/abs__ab_bottom_solid_dark_holo"
-                        android:scaleType="fitXY"/>
-                </LinearLayout>
+                android:weightSum="1"
+                android:gravity="bottom">
 
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="0.2"
-                    android:layout_marginTop="5dp">
+                    android:layout_marginBottom="5dp"
+                    android:padding="2dp">
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.7" >
-
-
+                    <ImageView
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:id="@+id/imgAR"
+                        android:src="@drawable/abs__ab_bottom_solid_dark_holo"
+                        android:scaleType="fitXY"/>
                 </LinearLayout>
 
 
@@ -109,24 +119,6 @@
                 android:layout_weight="0.95"
                 android:id="@+id/detailBlock">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="New Text"
-                    android:id="@+id/textView77" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="New Text"
-                    android:id="@+id/textView78" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Close"
-                    android:id="@+id/clsBtn" />
             </LinearLayout>
 
         </LinearLayout>
