--- a/rhymecity/src/main/res/values/colors.xml
+++ b/rhymecity/src/main/res/values/colors.xml
@@ -43,6 +43,7 @@
     <color name="red">#ee4d34</color>
     <color name="light_grey">#7A7A7A</color>
 
+    <color name="grey_trans">#F2F2F2</color>
 
 
 
