--- a/rhymecity/src/main/res/drawable/go_button.xml
+++ b/rhymecity/src/main/res/drawable/go_button.xml
@@ -1,38 +1,40 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<?xml version="1.0" encoding="utf-8"?>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item>
-        <shape android:shape="rectangle">
-            <size
-                android:width="100dp"
-                android:height="40dp" />
-            <solid android:color="#5EB888" />
-            <corners android:radius="0dp"/>
+    <item android:state_pressed="true" >
+        <shape>
+            <solid
+                android:color="#4650B4" />
+            <stroke
+                android:width="1dp"
+                android:color="#4650B4" />
+            <corners
+                android:radius="6dp" />
+            <padding
+                android:left="10dp"
+                android:top="10dp"
+                android:right="10dp"
+                android:bottom="10dp" />
         </shape>
     </item>
 
-    <item
-        android:top="-40dp"
-        android:bottom="65dp"
-        android:right="-30dp">
-        <rotate
-            android:fromDegrees="45">
-            <shape android:shape="rectangle">
-                <solid android:color="#ffffff" />
-            </shape>
-        </rotate>
+    <item>
+        <shape>
+            <gradient
+                android:startColor="#8CBEDC"
+                android:endColor="#64A0B4"
+                android:angle="270" />
+            <stroke
+                android:width="1dp"
+                android:color="#4650B4" />
+            <corners
+                android:radius="6dp" />
+            <padding
+                android:left="10dp"
+                android:top="10dp"
+                android:right="10dp"
+                android:bottom="10dp" />
+        </shape>
     </item>
 
-    <item
-        android:top="65dp"
-        android:bottom="-40dp"
-        android:right="-30dp">
-        <rotate
-            android:fromDegrees="-45">
-            <shape android:shape="rectangle">
-                <solid android:color="#ffffff" />
-            </shape>
-        </rotate>
-    </item>
-
-</layer-list>
+</selector>
