--- a/rhymecity/src/main/res/layout/augmented_cam.xml
+++ b/rhymecity/src/main/res/layout/augmented_cam.xml
@@ -35,21 +35,21 @@
                 android:id="@+id/aug_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/placeholder_large_txt"
+                android:text="Place"
                 android:textColor="@android:color/white" />
 
             <TextView
                 android:id="@+id/aug_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/placeholder_large_txt"
+                android:text="Address"
                 android:textColor="@android:color/white" />
 
             <TextView
                 android:id="@+id/aug_distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/placeholder_large_txt"
+                android:text="Distance"
                 android:textColor="@android:color/white"
                 android:visibility="gone" />
         </LinearLayout>
