--- a/rhymecity/src/main/res/layout/drawer_header_closebtn.xml
+++ b/rhymecity/src/main/res/layout/drawer_header_closebtn.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
-        android:text="@string/x_lbl"
+        android:text="X"
         android:layout_marginRight="10dp"
         android:textSize="23dp"
         android:textColor="#ffffff" 
