--- a/rhymecity/src/main/res/layout/error_popup.xml
+++ b/rhymecity/src/main/res/layout/error_popup.xml
@@ -28,7 +28,7 @@
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
             android:paddingTop="50dp"
-            android:text="@string/test_lbl"
+            android:text="Error"
             android:textSize="14dp" />
     </RelativeLayout>
 
