--- a/rhymecity/src/main/res/layout/fragment_search.xml
+++ b/rhymecity/src/main/res/layout/fragment_search.xml
@@ -9,7 +9,7 @@
 
     <EditText
         android:id="@+id/search_edit_text"
-        android:hint="@string/search_hint"
+        android:hint=""
         android:layout_marginTop="@dimen/big_margin"
         android:layout_width="match_parent"
         android:imeOptions="actionSearch"
@@ -23,6 +23,6 @@
         android:layout_below="@id/search_edit_text"
         android:layout_marginTop="@dimen/standard_margin"
         android:gravity="center"
-        android:text="@string/rhyme_caps"/>
+        android:text=""/>
 
 </RelativeLayout>
