--- a/rhymecity/src/main/res/layout/map_layout.xml
+++ b/rhymecity/src/main/res/layout/map_layout.xml
@@ -13,16 +13,16 @@
         android:id="@+id/storeAddressLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#99000000"
+        android:background="#59000000"
         android:orientation="horizontal"
         android:visibility="visible"
         android:weightSum="1">
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.9">
+            android:layout_weight="0.8">
 
             <TextView
                 android:id="@+id/txtAddress"
@@ -36,30 +36,31 @@
                 />
 
             <TextView
-                android:id="@+id/weather"
+                android:padding="10dp"
+                android:id="@+id/weather1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="x"
                 android:layout_marginLeft="10dp"
-                android:padding="10dp"
                 android:textColor="#ffffff"
                 android:textSize="14dp"
                 />
+
         </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.1"
+            android:layout_weight="0.2"
             android:gravity="center">
 
             <ImageView
                 android:id="@+id/navigationIcon"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/abs__ab_bottom_solid_dark_holo"/>
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true"
+                android:src="@drawable/nav_icon"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -83,43 +84,16 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.4"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:gravity="left|center">
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="0.05"
-                android:weightSum="1"
-                android:gravity="bottom">
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.2"
-                    android:layout_marginBottom="5dp"
-                    android:padding="2dp">
-
-                    <ImageView
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:id="@+id/imgAR"
-                        android:src="@drawable/abs__ab_bottom_solid_dark_holo"
-                        android:scaleType="fitXY"/>
-                </LinearLayout>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="0.95"
-                android:id="@+id/detailBlock">
-
-            </LinearLayout>
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/imgAR"
+                android:layout_marginLeft="3dp"
+                android:src="@drawable/ar_icon"
+                android:scaleType="fitXY"/>
 
         </LinearLayout>
 
