--- a/rhymecity/src/main/res/layout/simple_text.xml
+++ b/rhymecity/src/main/res/layout/simple_text.xml
@@ -3,4 +3,4 @@
     android:id="@+id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="@string/textview_placeholder_lbl" />
+    android:text="" />
